Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35919

Server crashes in Item_func_vec_distance::fix_length_and_dec upon reading from I_S table

    XMLWordPrintable

Details

    Description

      The test case is meaningless, but I'm setting it to "critical" for now as a bug in a new feature (which I missed during feature testing, and which will be painful for random tests if it's not fixed now).

      SELECT VEC_DISTANCE(VALUE(KEY_CACHE_NAME), 0x30303030) FROM information_schema.KEY_CACHES;
      

      main 89f5d28191a8ecf7a1511de22d00538b063acda7

      #3  <signal handler called>
      #4  0x00005583f7a4e059 in Item_func_vec_distance::fix_length_and_dec (this=0x62d00033efd8, thd=0x62c0000c0218) at /data/bld/main-asan/sql/item_vectorfunc.cc:67
      #5  0x00005583f767f926 in Item_func::fix_fields (this=0x62d00033efd8, thd=0x62c0000c0218, ref=0x62d00033f0a8) at /data/bld/main-asan/sql/item_func.cc:366
      #6  0x00005583f68c674d in Item::fix_fields_if_needed (this=0x62d00033efd8, thd=0x62c0000c0218, ref=0x62d00033f0a8) at /data/bld/main-asan/sql/item.h:1168
      #7  0x00005583f68c6783 in Item::fix_fields_if_needed_for_scalar (this=0x62d00033efd8, thd=0x62c0000c0218, ref=0x62d00033f0a8) at /data/bld/main-asan/sql/item.h:1177
      #8  0x00005583f69edfc2 in setup_fields (thd=0x62c0000c0218, ref_pointer_array=..., fields=..., column_usage=MARK_COLUMNS_READ, sum_func_list=0x62d000340ca0, pre_fix=0x62d00033e9e0, allow_sum_func=true, where=THD_WHERE::DEFAULT_WHERE) at /data/bld/main-asan/sql/sql_base.cc:8094
      #9  0x00005583f6c8aa34 in JOIN::prepare (this=0x62d0003408f8, tables_init=0x62d00033f1d0, conds_init=0x0, og_num=0, order_init=0x0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x62d00033e710, unit_arg=0x62c0000c4740) at /data/bld/main-asan/sql/sql_select.cc:1572
      #10 0x00005583f6cb2a61 in mysql_select (thd=0x62c0000c0218, tables=0x62d00033f1d0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2701396736, result=0x62d0003408c8, unit=0x62c0000c4740, select_lex=0x62d00033e710) at /data/bld/main-asan/sql/sql_select.cc:5331
      #11 0x00005583f6c80f1f in handle_select (thd=0x62c0000c0218, lex=0x62c0000c4660, result=0x62d0003408c8, setup_tables_done_option=0) at /data/bld/main-asan/sql/sql_select.cc:633
      #12 0x00005583f6ba38f9 in execute_sqlcom_select (thd=0x62c0000c0218, all_tables=0x62d00033f1d0) at /data/bld/main-asan/sql/sql_parse.cc:6191
      #13 0x00005583f6b934eb in mysql_execute_command (thd=0x62c0000c0218, is_called_from_prepared_stmt=false) at /data/bld/main-asan/sql/sql_parse.cc:3980
      #14 0x00005583f6bae390 in mysql_parse (thd=0x62c0000c0218, rawbuf=0x62d00033e5f0 "SELECT VEC_DISTANCE(VALUE(KEY_CACHE_NAME), 0x30303030) FROM information_schema.KEY_CACHES", length=89, parser_state=0x7f7e90a61a30) at /data/bld/main-asan/sql/sql_parse.cc:7915
      #15 0x00005583f6b8519f in dispatch_command (command=COM_QUERY, thd=0x62c0000c0218, packet=0x629000253219 "SELECT VEC_DISTANCE(VALUE(KEY_CACHE_NAME), 0x30303030) FROM information_schema.KEY_CACHES", packet_length=89, blocking=true) at /data/bld/main-asan/sql/sql_parse.cc:1903
      #16 0x00005583f6b81ea7 in do_command (thd=0x62c0000c0218, blocking=true) at /data/bld/main-asan/sql/sql_parse.cc:1416
      #17 0x00005583f70790e5 in do_handle_one_connection (connect=0x6080000037b8, put_in_cache=true) at /data/bld/main-asan/sql/sql_connect.cc:1415
      #18 0x00005583f7078c44 in handle_one_connection (arg=0x608000003738) at /data/bld/main-asan/sql/sql_connect.cc:1327
      #19 0x00005583f7d332d8 in pfs_spawn_thread (arg=0x617000005b98) at /data/bld/main-asan/storage/perfschema/pfs.cc:2198
      #20 0x00007f7ea0aa8044 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #21 0x00007f7ea0b2861c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 20m
                  20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.