MDEV-35919 Server crashes in Item_func_vec_distance::fix_length_and_dec upon reading from I_S table